[build-system]
requires = ["setuptools>=64"]
build-backend = "setuptools.build_meta"

[project]
name = "cjm-hf-plugin-utils"
dynamic = ["version"]
description = "Hugging Face Hub helpers for cjm-plugin-system plugins: cache-config mixin, progress-reporting snapshot downloads, and typed-OOM model loading."
readme = "README.md"
requires-python = ">=3.12"
license = {text = "Apache-2.0"}
authors = [{name = "Christian J. Mills", email = "9126128+cj-mills@users.noreply.github.com"}]
keywords = ['nbdev']
classifiers = [
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3 :: Only",
]
dependencies = ['cjm-plugin-system>=0.0.41', 'cjm-torch-plugin-utils>=0.0.5', 'huggingface_hub', 'tqdm']

[project.urls]
Repository = "https://github.com/cj-mills/cjm-hf-plugin-utils"
Documentation = "https://cj-mills.github.io/cjm-hf-plugin-utils/"

[project.entry-points.nbdev]
cjm_hf_plugin_utils = "cjm_hf_plugin_utils._modidx:d"

[tool.setuptools.dynamic]
version = {attr = "cjm_hf_plugin_utils.__version__"}

[tool.setuptools.packages.find]
include = ["cjm_hf_plugin_utils"]

[tool.nbdev]
