[build-system]
requires = ["setuptools>=64"]
build-backend = "setuptools.build_meta"

[project]
name = "cjm-substrate-hf-utils"
dynamic = ["version"]
description = "Hugging Face Hub helpers for cjm-substrate capabilities: cache-config mixin, progress-reporting snapshot downloads, and typed-OOM model loading."
readme = "README.md"
requires-python = ">=3.12"
license = {text = "Apache-2.0"}
authors = [{name = "Christian J. Mills", email = "9126128+cj-mills@users.noreply.github.com"}]
keywords = ['nbdev']
classifiers = [
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3 :: Only",
]
dependencies = ['cjm-substrate>=0.0.47', 'cjm-substrate-torch-utils>=0.0.11', 'huggingface_hub', 'tqdm']

[project.urls]
Repository = "https://github.com/cj-mills/cjm-substrate-hf-utils"
Documentation = "https://cj-mills.github.io/cjm-substrate-hf-utils/"

[project.entry-points.nbdev]
cjm_substrate_hf_utils = "cjm_substrate_hf_utils._modidx:d"

[tool.setuptools.dynamic]
version = {attr = "cjm_substrate_hf_utils.__version__"}

[tool.setuptools.packages.find]
include = ["cjm_substrate_hf_utils"]

[tool.nbdev]
